// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListInline component should render correctly with children 1`] = `
<ul
  className="sc-iCfMLu bfJEOt"
>
  <li
    className="sc-furwcr gVnZGP"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-furwcr gVnZGP"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-furwcr gVnZGP"
  >
    <div>
      an
    </div>
  </li>
  <li
    className="sc-furwcr gVnZGP"
  >
    <div>
      example
    </div>
  </li>
</ul>
`;

exports[`ListInline component should render correctly without children 1`] = `
<ul
  className="sc-iCfMLu bfJEOt"
/>
`;

exports[`ListInline component should render with custom padding 1`] = `
<ul
  className="sc-iCfMLu bfJEOt"
>
  <li
    className="sc-furwcr gVnZGP"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-furwcr gVnZGP"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-furwcr gVnZGP"
  >
    <div>
      fun
    </div>
  </li>
</ul>
`;
